# build-system

./: .config  CMakeLists.txt  Kconfig  build.py
components/bar/: CMakeLists.txt  bar.c
components/bar/include/: bar.h
components/foo/: CMakeLists.txt  foo.c
components/foo/include/: foo.h
main/: CMakeLists.txt  main.c
main/include/: main.h
tools/: component.cmake  confgen.py
